@@ -83,6 +83,12 @@ class ConfigReader {
         int ReadLimitOptions();
 
         /**
+          * Helper function to read Significance settings
+          * @return int status code
+          */
+        int ReadSignificanceOptions();
+
+        /**
           * Helper function to read Region settings
           * @return int status code
           */
