@@ -115,6 +115,10 @@ Limit: string
   POIAsimov: float
   SignalInjection: TRUE/FALSE
 
+Significance: string
+  SignificanceBlind: TRUE/FALSE
+  POIAsimov: float
+
 Options: string
 
 Region: string
